[gd_scene load_steps=16 format=4 uid="uid://bo8ke01l11gor"]

[ext_resource type="Script" uid="uid://c7rrhgeevwtus" path="res://scripts/world/randomized_stage.gd" id="1_b684k"]
[ext_resource type="TileSet" uid="uid://c5k358s71dvg7" path="res://assets/deserttileset.tres" id="1_d7eh3"]
[ext_resource type="PackedScene" uid="uid://c6pfxs37rwloc" path="res://scenes/hurry_up.tscn" id="2_4af3r"]
[ext_resource type="Script" uid="uid://doclw3ct8jf7v" path="res://scripts/breakable_spawner.gd" id="3_alxnw"]
[ext_resource type="Script" uid="uid://c6ubwejmc188k" path="res://players_manager.gd" id="4_kyswr"]
[ext_resource type="Script" uid="uid://v2bbm1lgibpy" path="res://scripts/misobon_path.gd" id="5_8fws0"]
[ext_resource type="PackedScene" uid="uid://c4i5gyl4cut3t" path="res://scenes/bombs/bomb_pool.tscn" id="6_gvntt"]
[ext_resource type="PackedScene" uid="uid://b22qg08qddy6x" path="res://scenes/pick_up_pool.tscn" id="7_5ws5l"]
[ext_resource type="Script" uid="uid://cc3ogep372v8" path="res://scripts/player_spawner.gd" id="10_aokgl"]
[ext_resource type="Script" uid="uid://cb0rr8pr2674f" path="res://scripts/misobon_player_spawner.gd" id="11_5q523"]
[ext_resource type="Script" uid="uid://dn2j2ibwmr6nn" path="res://scripts/music.gd" id="12_twte8"]
[ext_resource type="Script" uid="uid://gnneqjcybokd" path="res://scripts/game_ui.gd" id="13_i2nfo"]
[ext_resource type="FontFile" uid="uid://knb8u535cfkw" path="res://montserrat.otf" id="14_48y7k"]

[sub_resource type="Curve2D" id="Curve2D_o7i7u"]
_data = {
"points": PackedVector2Array(0.297315, 2.88107, 0, 0, 240, 16, 0, 0, 0, 0, 464, 16, 0, 0, 0, 0, 464, 464, 0, 0, 0, 0, 16, 464, 0, 0, 0, 0, 16, 16, 0, 0, 0, 0, 240, 16)
}
point_count = 6

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7j1x2"]

[node name="RandomizedDesertStage" type="Node2D"]
texture_filter = 1
script = ExtResource("1_b684k")
unbreakable_tile = Vector2i(6, 0)
_arena_rect = Rect2i(1, 3, 13, 11)
_world_edge_rect = Rect2i(-2, -2, 19, 19)
_misobon_path_rect = Rect2i(0, 0, 15, 15)
spawnpoints = Array[Vector2i]([Vector2i(1, 3), Vector2i(13, 3), Vector2i(1, 13), Vector2i(13, 13)])

[node name="Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAQAAwADAAEAAAABAAUAAwAEAAEAAAABAAYAAwAEAAEAAAABAAcAAwADAAEAAAABAAgAAwAEAAEAAAABAAkAAwADAAEAAAABAAoAAwADAAEAAAABAAsAAwAEAAEAAAACAAMAAwAEAAEAAAACAAQAAwAEAAEAAAACAAUAAwAEAAEAAAACAAYAAwAEAAEAAAACAAcAAwADAAEAAAACAAgAAwAEAAEAAAACAAkAAwADAAEAAAACAAoAAwADAAEAAAACAAsAAwACAAEAAAADAAMAAwAEAAEAAAADAAQAAwAEAAEAAAADAAUAAwAEAAEAAAADAAYAAwACAAEAAAADAAcAAwADAAEAAAADAAgAAwAEAAEAAAADAAkAAwAEAAEAAAADAAoAAwACAAEAAAADAAsAAwACAAEAAAAEAAMAAwAEAAEAAAAEAAQAAwADAAEAAAAEAAUAAwAEAAEAAAAEAAYAAwACAAEAAAAEAAcAAwACAAEAAAAEAAgAAwADAAEAAAAEAAkAAwADAAEAAAAEAAoAAwADAAEAAAAEAAsAAwAEAAEAAAAFAAMAAwACAAEAAAAFAAQAAwACAAEAAAAFAAUAAwAEAAEAAAAFAAYAAwADAAEAAAAFAAcAAwACAAEAAAAFAAgAAwADAAEAAAAFAAkAAwADAAEAAAAFAAoAAwACAAEAAAAFAAsAAwADAAEAAAAGAAMAAwADAAEAAAAGAAQAAwAEAAEAAAAGAAUAAwADAAEAAAAGAAYAAwADAAEAAAAGAAcAAwADAAEAAAAGAAgAAwACAAEAAAAGAAkAAwAEAAEAAAAGAAoAAwADAAEAAAAGAAsAAwACAAEAAAAHAAMAAwADAAEAAAAHAAQAAwADAAEAAAAHAAUAAwACAAEAAAAHAAYAAwAEAAEAAAAHAAcAAwADAAEAAAAHAAgAAwACAAEAAAAHAAkAAwAEAAEAAAAHAAoAAwADAAEAAAAHAAsAAwAEAAEAAAAIAAMAAwACAAEAAAAIAAQAAwADAAEAAAAIAAUAAwAEAAEAAAAIAAYAAwADAAEAAAAIAAcAAwAEAAEAAAAIAAgAAwAEAAEAAAAIAAkAAwAEAAEAAAAIAAoAAwADAAEAAAAIAAsAAwACAAEAAAAJAAMAAwACAAEAAAAJAAQAAwADAAEAAAAJAAUAAwACAAEAAAAJAAYAAwADAAEAAAAJAAcAAwACAAEAAAAJAAgAAwADAAEAAAAJAAkAAwAEAAEAAAAJAAoAAwAEAAEAAAAJAAsAAwAEAAEAAAAKAAMAAwADAAEAAAAKAAQAAwACAAEAAAAKAAUAAwACAAEAAAAKAAYAAwADAAEAAAAKAAcAAwAEAAEAAAAKAAgAAwAEAAEAAAAKAAkAAwACAAEAAAAKAAoAAwAEAAEAAAAKAAsAAwACAAEAAAALAAMAAwADAAEAAAALAAQAAwACAAEAAAALAAUAAwAEAAEAAAALAAYAAwACAAEAAAALAAcAAwADAAEAAAALAAgAAwACAAEAAAALAAkAAwADAAEAAAALAAoAAwADAAEAAAALAAsAAwACAAEAAAAMAAMAAwACAAEAAAAMAAQAAwACAAEAAAAMAAUAAwADAAEAAAAMAAYAAwACAAEAAAAMAAcAAwAEAAEAAAAMAAgAAwADAAEAAAAMAAkAAwACAAEAAAAMAAoAAwAEAAEAAAAMAAsAAwACAAEAAAANAAMAAwACAAEAAAANAAQAAwACAAEAAAANAAUAAwADAAEAAAANAAYAAwAEAAEAAAANAAcAAwACAAEAAAANAAgAAwACAAEAAAANAAkAAwACAAEAAAANAAoAAwAEAAEAAAANAAsAAwACAAEAAAABAAwAAwADAAEAAAABAA0AAwACAAEAAAACAAwAAwACAAEAAAACAA0AAwAEAAEAAAADAAwAAwAEAAEAAAADAA0AAwADAAEAAAAEAAwAAwACAAEAAAAEAA0AAwACAAEAAAAFAAwAAwAEAAEAAAAFAA0AAwACAAEAAAAGAAwAAwADAAEAAAAGAA0AAwACAAEAAAAHAAwAAwAEAAEAAAAHAA0AAwACAAEAAAAIAAwAAwACAAEAAAAIAA0AAwAEAAEAAAAJAAwAAwACAAEAAAAJAA0AAwADAAEAAAAKAAwAAwACAAEAAAAKAA0AAwADAAEAAAALAAwAAwAEAAEAAAALAA0AAwADAAEAAAAMAAwAAwACAAEAAAAMAA0AAwACAAEAAAANAAwAAwACAAEAAAANAA0AAwACAAEAAAABAAMAAwACAAEAAAAVAA8AAwACAAEAAAAVAA4AAwACAAEAAAAVAA0AAwAEAAEAAAAVAAwAAwAEAAEAAAAVAAsAAwAEAAEAAAAVAAoAAwADAAEAAAAVAAkAAwADAAEAAAAVAAgAAwADAAEAAAAVAAcAAwAEAAEAAAAVAAYAAwACAAEAAAAVAAUAAwAEAAEAAAAVAAQAAwACAAEAAAAVAAMAAwADAAEAAAAVAAIAAwACAAEAAAAVAAEAAwADAAEAAAAVAAAAAwADAAEAAAAUAA8AAwADAAEAAAAUAA4AAwACAAEAAAAUAA0AAwADAAEAAAAUAAwAAwADAAEAAAAUAAsAAwADAAEAAAAUAAoAAwAEAAEAAAAUAAkAAwACAAEAAAAUAAgAAwAEAAEAAAAUAAcAAwACAAEAAAAUAAYAAwACAAEAAAAUAAUAAwACAAEAAAAUAAQAAwADAAEAAAAUAAMAAwACAAEAAAAUAAIAAwAEAAEAAAAUAAEAAwAEAAEAAAAUAAAAAwACAAEAAAATAA8AAwAEAAEAAAATAA4AAwACAAEAAAATAA0AAwAEAAEAAAATAAwAAwACAAEAAAATAAsAAwAEAAEAAAATAAoAAwAEAAEAAAATAAkAAwACAAEAAAATAAgAAwADAAEAAAATAAcAAwACAAEAAAATAAYAAwAEAAEAAAATAAUAAwADAAEAAAATAAQAAwAEAAEAAAATAAMAAwACAAEAAAATAAIAAwADAAEAAAATAAEAAwADAAEAAAATAAAAAwADAAEAAAASAA8AAwACAAEAAAASAA4AAwACAAEAAAASAA0AAwACAAEAAAASAAwAAwACAAEAAAASAAsAAwAEAAEAAAASAAoAAwAEAAEAAAASAAkAAwADAAEAAAASAAgAAwADAAEAAAASAAcAAwAEAAEAAAASAAYAAwACAAEAAAASAAUAAwADAAEAAAASAAQAAwADAAEAAAASAAMAAwACAAEAAAASAAIAAwADAAEAAAASAAEAAwAEAAEAAAASAAAAAwACAAEAAAARAA8AAwADAAEAAAARAA4AAwACAAEAAAARAA0AAwAEAAEAAAARAAwAAwACAAEAAAARAAsAAwACAAEAAAARAAoAAwACAAEAAAARAAkAAwAEAAEAAAARAAgAAwACAAEAAAARAAcAAwADAAEAAAARAAYAAwADAAEAAAARAAUAAwACAAEAAAARAAQAAwACAAEAAAARAAMAAwAEAAEAAAARAAIAAwAEAAEAAAARAAEAAwACAAEAAAARAAAAAwACAAEAAAAQAA8AAwAEAAEAAAAQAA4AAwACAAEAAAAQAA0AAwADAAEAAAAQAAwAAwADAAEAAAAQAAsAAwAEAAEAAAAQAAoAAwADAAEAAAAQAAkAAwADAAEAAAAQAAgAAwAEAAEAAAAQAAcAAwADAAEAAAAQAAYAAwADAAEAAAAQAAUAAwAEAAEAAAAQAAQAAwADAAEAAAAQAAMAAwACAAEAAAAQAAIAAwADAAEAAAAQAAEAAwACAAEAAAAQAAAAAwACAAEAAAAPAA8AAwAEAAEAAAAPAA4AAwAEAAEAAAAPAA0AAwAEAAEAAAAPAAwAAwADAAEAAAAPAAsAAwACAAEAAAAPAAoAAwACAAEAAAAPAAkAAwAEAAEAAAAPAAgAAwAEAAEAAAAPAAcAAwAEAAEAAAAPAAYAAwADAAEAAAAPAAUAAwACAAEAAAAPAAQAAwAEAAEAAAAPAAMAAwAEAAEAAAAPAAIAAwAEAAEAAAAPAAEAAwADAAEAAAAPAAAAAwACAAEAAAAOAA8AAwACAAEAAAAOAA4AAwAEAAEAAAAOAA0AAwADAAEAAAAOAAwAAwACAAEAAAAOAAsAAwAEAAEAAAAOAAoAAwAEAAEAAAAOAAkAAwACAAEAAAAOAAgAAwACAAEAAAAOAAcAAwAEAAEAAAAOAAYAAwAEAAEAAAAOAAUAAwADAAEAAAAOAAQAAwADAAEAAAAOAAMAAwADAAEAAAAOAAIAAwACAAEAAAAOAAEAAwADAAEAAAAOAAAAAwACAAEAAAANAA8AAwADAAEAAAANAA4AAwAEAAEAAAANAAIAAwAEAAEAAAANAAEAAwACAAEAAAANAAAAAwAEAAEAAAAMAA8AAwACAAEAAAAMAA4AAwADAAEAAAAMAAIAAwACAAEAAAAMAAEAAwAEAAEAAAAMAAAAAwACAAEAAAALAA8AAwAEAAEAAAALAA4AAwAEAAEAAAALAAIAAwADAAEAAAALAAEAAwAEAAEAAAALAAAAAwACAAEAAAAKAA8AAwADAAEAAAAKAA4AAwACAAEAAAAKAAIAAwAEAAEAAAAKAAEAAwAEAAEAAAAKAAAAAwAEAAEAAAAJAA8AAwADAAEAAAAJAA4AAwADAAEAAAAJAAIAAwACAAEAAAAJAAEAAwACAAEAAAAJAAAAAwADAAEAAAAIAA8AAwAEAAEAAAAIAA4AAwAEAAEAAAAIAAIAAwACAAEAAAAIAAEAAwAEAAEAAAAIAAAAAwACAAEAAAAHAA8AAwACAAEAAAAHAA4AAwADAAEAAAAHAAIAAwADAAEAAAAHAAEAAwADAAEAAAAHAAAAAwAEAAEAAAAGAA8AAwAEAAEAAAAGAA4AAwADAAEAAAAGAAIAAwACAAEAAAAGAAEAAwAEAAEAAAAGAAAAAwACAAEAAAAFAA8AAwAEAAEAAAAFAA4AAwACAAEAAAAFAAIAAwAEAAEAAAAFAAEAAwADAAEAAAAFAAAAAwAEAAEAAAAEAA8AAwAEAAEAAAAEAA4AAwACAAEAAAAEAAIAAwADAAEAAAAEAAEAAwACAAEAAAAEAAAAAwAEAAEAAAADAA8AAwACAAEAAAADAA4AAwACAAEAAAADAAIAAwADAAEAAAADAAEAAwAEAAEAAAADAAAAAwACAAEAAAACAA8AAwACAAEAAAACAA4AAwAEAAEAAAACAAIAAwADAAEAAAACAAEAAwAEAAEAAAACAAAAAwACAAEAAAABAA8AAwAEAAEAAAABAA4AAwACAAEAAAABAAIAAwAEAAEAAAABAAEAAwADAAEAAAABAAAAAwACAAEAAAAAAA8AAwAEAAEAAAAAAA4AAwADAAEAAAAAAA0AAwADAAEAAAAAAAwAAwADAAEAAAAAAAsAAwADAAEAAAAAAAoAAwAEAAEAAAAAAAkAAwADAAEAAAAAAAgAAwADAAEAAAAAAAcAAwADAAEAAAAAAAYAAwAEAAEAAAAAAAUAAwADAAEAAAAAAAQAAwAEAAEAAAAAAAMAAwAEAAEAAAAAAAIAAwACAAEAAAAAAAEAAwAEAAEAAAAAAAAAAwAEAAEAAAD//w8AAwAEAAEAAAD//w4AAwAEAAEAAAD//w0AAwADAAEAAAD//wwAAwADAAEAAAD//wsAAwAEAAEAAAD//woAAwAEAAEAAAD//wkAAwACAAEAAAD//wgAAwADAAEAAAD//wcAAwAEAAEAAAD//wYAAwAEAAEAAAD//wUAAwAEAAEAAAD//wQAAwACAAEAAAD//wMAAwACAAEAAAD//wIAAwACAAEAAAD//wEAAwADAAEAAAD//wAAAwADAAEAAAD+/w8AAwADAAEAAAD+/w4AAwACAAEAAAD+/w0AAwACAAEAAAD+/wwAAwADAAEAAAD+/wsAAwADAAEAAAD+/woAAwADAAEAAAD+/wkAAwADAAEAAAD+/wgAAwAEAAEAAAD+/wcAAwAEAAEAAAD+/wYAAwAEAAEAAAD+/wUAAwACAAEAAAD+/wQAAwACAAEAAAD+/wMAAwADAAEAAAD+/wIAAwADAAEAAAD+/wEAAwAEAAEAAAD+/wAAAwAEAAEAAAD9/w8AAwAEAAEAAAD9/w4AAwADAAEAAAD9/w0AAwAEAAEAAAD9/wwAAwADAAEAAAD9/wsAAwADAAEAAAD9/woAAwAEAAEAAAD9/wkAAwAEAAEAAAD9/wgAAwAEAAEAAAD9/wcAAwAEAAEAAAD9/wYAAwAEAAEAAAD9/wUAAwACAAEAAAD9/wQAAwACAAEAAAD9/wMAAwADAAEAAAD9/wIAAwADAAEAAAD9/wEAAwACAAEAAAD9/wAAAwACAAEAAAD8/w8AAwADAAEAAAD8/w4AAwAEAAEAAAD8/w0AAwACAAEAAAD8/wwAAwADAAEAAAD8/wsAAwAEAAEAAAD8/woAAwACAAEAAAD8/wkAAwAEAAEAAAD8/wgAAwADAAEAAAD8/wcAAwADAAEAAAD8/wYAAwACAAEAAAD8/wUAAwACAAEAAAD8/wQAAwAEAAEAAAD8/wMAAwADAAEAAAD8/wIAAwADAAEAAAD8/wEAAwAEAAEAAAD8/wAAAwAEAAEAAAD7/w8AAwACAAEAAAD7/w4AAwAEAAEAAAD7/w0AAwADAAEAAAD7/wwAAwACAAEAAAD7/wsAAwAEAAEAAAD7/woAAwACAAEAAAD7/wkAAwAEAAEAAAD7/wgAAwADAAEAAAD7/wcAAwAEAAEAAAD7/wYAAwACAAEAAAD7/wUAAwADAAEAAAD7/wQAAwADAAEAAAD7/wMAAwACAAEAAAD7/wIAAwACAAEAAAD7/wEAAwADAAEAAAD7/wAAAwADAAEAAAD6/w8AAwACAAEAAAD6/w4AAwADAAEAAAD6/w0AAwAEAAEAAAD6/wwAAwACAAEAAAD6/wsAAwACAAEAAAD6/woAAwAEAAEAAAD6/wkAAwAEAAEAAAD6/wgAAwAEAAEAAAD6/wcAAwADAAEAAAD6/wYAAwAEAAEAAAD6/wUAAwAEAAEAAAD6/wQAAwADAAEAAAD6/wMAAwAEAAEAAAD6/wIAAwAEAAEAAAD6/wEAAwACAAEAAAD6/wAAAwADAAEAAAAVABAAAwAEAAEAAAAVAP//AwADAAEAAAAUABAAAwAEAAEAAAAUAP//AwADAAEAAAATABAAAwACAAEAAAATAP//AwAEAAEAAAASABAAAwACAAEAAAASAP//AwACAAEAAAARABAAAwAEAAEAAAARAP//AwACAAEAAAAQABAAAwADAAEAAAAQAP//AwACAAEAAAAPABAAAwADAAEAAAAPAP//AwACAAEAAAAOABAAAwACAAEAAAAOAP//AwACAAEAAAANABAAAwADAAEAAAANAP//AwACAAEAAAAMABAAAwAEAAEAAAAMAP//AwAEAAEAAAALABAAAwADAAEAAAALAP//AwAEAAEAAAAKABAAAwAEAAEAAAAKAP//AwACAAEAAAAJABAAAwADAAEAAAAJAP//AwACAAEAAAAIABAAAwACAAEAAAAIAP//AwACAAEAAAAHABAAAwAEAAEAAAAHAP//AwACAAEAAAAGABAAAwACAAEAAAAGAP//AwAEAAEAAAAFABAAAwAEAAEAAAAFAP//AwACAAEAAAAEABAAAwACAAEAAAAEAP//AwACAAEAAAADABAAAwACAAEAAAADAP//AwACAAEAAAACABAAAwACAAEAAAACAP//AwADAAEAAAABABAAAwADAAEAAAABAP//AwACAAEAAAAAAP//AwADAAEAAAD//xAAAwACAAEAAAD/////AwACAAEAAAD+/xAAAwADAAEAAAD+////AwAEAAEAAAD9/xAAAwAEAAEAAAD9////AwAEAAEAAAD8/xAAAwADAAEAAAD8////AwAEAAEAAAD7/xAAAwAEAAEAAAD7////AwAEAAEAAAD6/xAAAwADAAEAAAD6////AwADAAEAAAAAABAAAwACAAEAAAA=")
tile_set = ExtResource("1_d7eh3")

[node name="Bounds" type="TileMapLayer" parent="." groups=["bombstop", "thrown_bomb_bounces"]]
tile_map_data = PackedByteArray("AAAAAAAAAwABAAAAABAAAAEAAwACAAAAABAAAAIAAwACAAAAABAAAAMAAwACAAAAADAAAAQAAwACAAAAADAAAAUAAwACAAAAADAAAAYAAwACAAAAADAAAAcAAwACAAAAADAAAAgAAwACAAAAADAAAAkAAwACAAAAADAAAAoAAwACAAAAADAAAAsAAwACAAAAADAAAAwAAwACAAAAADABAAAAAwAAAAAAAAACAAAAAwAAAAAAAAACAAIAAwABAAEAAAADAAAAAwAAAAAAAAAEAAAAAwAAAAAAAAAEAAIAAwABAAEAAAAFAAAAAwAAAAAAAAAGAAAAAwAAAAAAAAAGAAIAAwABAAEAAAAHAAAAAwAAAAAAAAAIAAAAAwAAAAAAAAAIAAIAAwABAAEAAAAJAAAAAwAAAAAAAAAKAAAAAwAAAAAAAAAKAAIAAwABAAEAAAALAAAAAwAAAAAAAAAMAAIAAwABAAEAAAAOAAAAAwABAAAAAAAOAAEAAwACAAAAAAAOAAIAAwACAAAAAAAOAAMAAwACAAAAAAAOAAQAAwACAAAAAAAOAAUAAwACAAAAAAAOAAYAAwACAAAAAAAOAAcAAwACAAAAAAAOAAgAAwACAAAAAAAOAAkAAwACAAAAAAAOAAoAAwACAAAAAAAOAAsAAwACAAAAAAAOAAwAAwACAAAAAAAAAA0AAwACAAAAADAAAA4AAwAEAAAAAFABAAEAAwABAAEAAAABAAIAAwABAAEAAAABAA4AAwADAAAAAAACAAEAAwABAAEAAAACAA4AAwADAAAAAAADAAEAAwABAAEAAAADAAIAAwABAAEAAAADAA4AAwADAAAAAAAEAAEAAwABAAEAAAAEAA4AAwADAAAAAAAFAAEAAwABAAEAAAAFAAIAAwABAAEAAAAFAA4AAwADAAAAAAAGAAEAAwABAAEAAAAGAA4AAwADAAAAAAAHAAEAAwABAAEAAAAHAAIAAwABAAEAAAAHAA4AAwADAAAAAAAIAAEAAwABAAEAAAAIAA4AAwADAAAAAAAJAAEAAwABAAEAAAAJAAIAAwABAAEAAAAJAA4AAwADAAAAAAAKAAEAAwABAAEAAAAKAA4AAwADAAAAAAALAAEAAwABAAEAAAALAAIAAwABAAEAAAALAA4AAwADAAAAAAAMAAEAAwABAAEAAAAMAA4AAwADAAAAAAANAAEAAwABAAEAAAANAAIAAwABAAEAAAANAA4AAwADAAAAAAAOAA0AAwACAAAAAAAOAA4AAwAEAAAAAAABABAAAwADAAAAAAACABAAAwADAAAAAAADABAAAwADAAAAAAAEABAAAwADAAAAAAAFABAAAwADAAAAAAAGABAAAwADAAAAAAAHABAAAwADAAAAAAAIABAAAwADAAAAAAAJABAAAwADAAAAAAAKABAAAwADAAAAAAALABAAAwADAAAAAAAMABAAAwADAAAAAAANABAAAwADAAAAAAAQAA0AAwACAAAAAAAQAAwAAwACAAAAAAAQAAoAAwACAAAAAAAQAAIAAwACAAAAAAAQAAMAAwACAAAAAAAQAAQAAwACAAAAAAAQAAUAAwACAAAAAAAQAAYAAwACAAAAAAAQAAcAAwACAAAAAAAQAAgAAwACAAAAAAAQAAkAAwACAAAAAAAQAAsAAwACAAAAAAAQAAEAAwACAAAAAAAQAA4AAwACAAAAAAAQAA8AAwACAAAAAAAOABAAAwADAAAAAAAPABAAAwADAAAAAAAQABAAAwAEAAAAAAAQAAAAAwACAAAAAAD+/wAAAwACAAAAADD+/wEAAwACAAAAADD+/wIAAwACAAAAADD+/wMAAwACAAAAADD+/wQAAwACAAAAADD+/wUAAwACAAAAADD+/wYAAwACAAAAADD+/wcAAwACAAAAADD+/wgAAwACAAAAADD+/wkAAwACAAAAADD+/woAAwACAAAAADD+/wsAAwACAAAAADD+/wwAAwACAAAAADD+/w0AAwACAAAAADD+/w4AAwACAAAAADD+/w8AAwACAAAAADAAABAAAwADAAAAAAD//xAAAwADAAAAAAD+/xAAAwAEAAAAABD+//7/AwABAAAAABD///7/AwAAAAAAAAAAAP7/AwAAAAAAAAABAP7/AwAAAAAAAAACAP7/AwAAAAAAAAADAP7/AwAAAAAAAAAEAP7/AwAAAAAAAAAFAP7/AwAAAAAAAAAGAP7/AwAAAAAAAAAMAP7/AwAAAAAAAAANAP7/AwAAAAAAAAAOAP7/AwAAAAAAAAAPAP7/AwAAAAAAAAAQAP7/AwABAAAAAAAMAAAAAwAAAAAAAAANAAAAAwAAAAAAAAAQAP//AwACAAAAAAD+////AwACAAAAABALAP7/AwAAAAAAAAAKAP7/AwAAAAAAAAAJAP7/AwAAAAAAAAAIAP7/AwAAAAAAAAAHAP7/AwAAAAAAAAA=")
tile_set = ExtResource("1_d7eh3")

[node name="Obsticals" type="TileMapLayer" parent="." groups=["bombstop", "thrown_bomb_bounces"]]
tile_map_data = PackedByteArray("AAACAAwAAwAGAAAAAAAEAAwAAwAGAAAAAAAGAAwAAwAGAAAAAAAIAAwAAwAGAAAAAAAKAAwAAwAGAAAAAAAMAAwAAwAGAAAAAAAMAAoAAwAGAAAAAAAKAAoAAwAGAAAAAAAIAAoAAwAGAAAAAAAGAAoAAwAGAAAAAAAEAAoAAwAGAAAAAAACAAoAAwAGAAAAAAACAAgAAwAGAAAAAAAEAAgAAwAGAAAAAAAGAAgAAwAGAAAAAAAIAAgAAwAGAAAAAAAKAAgAAwAGAAAAAAAMAAgAAwAGAAAAAAAMAAYAAwAGAAAAAAAKAAYAAwAGAAAAAAAIAAYAAwAGAAAAAAAGAAYAAwAGAAAAAAAEAAYAAwAGAAAAAAACAAYAAwAGAAAAAAACAAQAAwAGAAAAAAAEAAQAAwAGAAAAAAAGAAQAAwAGAAAAAAAIAAQAAwAGAAAAAAAKAAQAAwAGAAAAAAAMAAQAAwAGAAAAAAA=")
tile_set = ExtResource("1_d7eh3")

[node name="HurryUp" parent="." instance=ExtResource("2_4af3r")]
tile_set = ExtResource("1_d7eh3")

[node name="Breakables" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]
script = ExtResource("4_kyswr")

[node name="MisobonPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_o7i7u")
script = ExtResource("5_8fws0")

[node name="BombPool" parent="." instance=ExtResource("6_gvntt")]

[node name="PickupPool" parent="." instance=ExtResource("7_5ws5l")]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(250, 250)
zoom = Vector2(1.3, 1.3)

[node name="Timers" type="Node" parent="."]

[node name="MatchTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 120.0
one_shot = true
autostart = true

[node name="Music" type="Node" parent="."]
script = ExtResource("12_twte8")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="Music"]
stream = SubResource("AudioStreamRandomizer_7j1x2")
volume_db = -4.685
bus = &"Music"

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("13_i2nfo")

[node name="Border" type="ColorRect" parent="GameUI"]
offset_right = 1152.0
offset_bottom = 56.0
color = Color(0.619608, 0.380392, 0, 1)

[node name="Container" type="ColorRect" parent="GameUI/Border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -20.0
offset_right = 568.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.168627, 0.266667, 1)

[node name="Players" type="HBoxContainer" parent="GameUI/Border/Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -20.0
offset_right = 1128.0
offset_bottom = 20.0
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Timer" type="HSplitContainer" parent="GameUI/Border/Container/Players"]
layout_mode = 2

[node name="Hourglass" type="Label" parent="GameUI/Border/Container/Players/Timer"]
layout_mode = 2
text = "⌛"
vertical_alignment = 1

[node name="RemainingTime" type="Label" parent="GameUI/Border/Container/Players/Timer"]
unique_name_in_owner = true
layout_mode = 2
text = "2:00"

[node name="SeparatorTimerP1" type="ColorRect" parent="GameUI/Border/Container/Players"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.619608, 0.380392, 0, 1)

[node name="P1" type="HSplitContainer" parent="GameUI/Border/Container/Players"]
layout_mode = 2
size_flags_horizontal = 3

[node name="P1Name" type="Label" parent="GameUI/Border/Container/Players/P1"]
layout_mode = 2
text = "P1"
vertical_alignment = 1

[node name="P1Score" type="Label" parent="GameUI/Border/Container/Players/P1"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SeparatorP12" type="ColorRect" parent="GameUI/Border/Container/Players"]
visible = false
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.619608, 0.380392, 0, 1)

[node name="P2" type="HSplitContainer" parent="GameUI/Border/Container/Players"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="P2Name" type="Label" parent="GameUI/Border/Container/Players/P2"]
layout_mode = 2
text = "P2"
vertical_alignment = 1

[node name="P2Score" type="Label" parent="GameUI/Border/Container/Players/P2"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SeparatorP23" type="ColorRect" parent="GameUI/Border/Container/Players"]
visible = false
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.619608, 0.380392, 0, 1)

[node name="P3" type="HSplitContainer" parent="GameUI/Border/Container/Players"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="P3Name" type="Label" parent="GameUI/Border/Container/Players/P3"]
layout_mode = 2
vertical_alignment = 1

[node name="P3Score" type="Label" parent="GameUI/Border/Container/Players/P3"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SeparatorP34" type="ColorRect" parent="GameUI/Border/Container/Players"]
visible = false
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.619608, 0.380392, 0, 1)

[node name="P4" type="HSplitContainer" parent="GameUI/Border/Container/Players"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="P4Name" type="Label" parent="GameUI/Border/Container/Players/P4"]
layout_mode = 2
vertical_alignment = 1

[node name="P4Score" type="Label" parent="GameUI/Border/Container/Players/P4"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Winner" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 32.0
offset_top = 96.0
offset_right = 448.0
offset_bottom = 448.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("14_48y7k")
text = "THE WINNER IS:
YOU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitGame" type="Button" parent="Winner"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -61.0
offset_right = 132.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("14_48y7k")
text = "EXIT GAME"

[node name="BreakableSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Breakables")
script = ExtResource("3_alxnw")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../Players")
script = ExtResource("10_aokgl")

[node name="MisobonPlayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../MisobonPath")
script = ExtResource("11_5q523")

[connection signal="pressed" from="Winner/ExitGame" to="GameUI" method="_on_exit_game_pressed"]
